[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Aidan Murray", email="amurra24@nd.edu" },
]
description = "Tests certain mcdc functionality convergence to semi-analytical solutions provided by William Bennett"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["mcdc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"